force-app/main/default/objects/HT_RentReduction__c/HT_RentReduction__c.object-meta.xml
<CustomObject>
    <label>RentReduction</label>
    <nameField>
        <label>HT_RentReduction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RentReductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>