force-app/main/default/objects/HT_RentReduction__c/fields/AnchorAgreement__c.field-meta.xml
<CustomField>
    <fullName>AnchorAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AnchorAgreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipName>HT_RentReductions</relationshipName>
    <type>Lookup</type>
</CustomField>