force-app/main/default/objects/HT_RentReduction__c/fields/ColocationAgreement__c.field-meta.xml
<CustomField>
    <fullName>ColocationAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ColocationAgreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipName>HT_RentReductions1</relationshipName>
    <type>Lookup</type>
</CustomField>